Fixing the image element inserted

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lasagna</h1> 
 
-    <a href="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F7dba909b7657519b49a778efe8e2cb81%2F166143792920220824_174816.jpg&w=595&h=398&c=sc&poi=face&q=60&orient=true"></a> 
+    <img src="https://media.istockphoto.com/photos/meat-lasagna-picture-id543831374"> 
 
     <h2>Description</h2>
     <p><strong>Pesto</strong> lasagna is a special recipe in which two stars of our cuisine come together harmoniously in a first course of homemade pasta that evokes the flavors of tradition. Layers of handmade egg pasta sheets alternate with a tasty and strong Genoese pesto (basil sauce) to be prepared with the first leaves of basil offered by the season.</p>
