--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -17,6 +17,28 @@
 
     <p>The cooked meatloaf can be sliced like a loaf of bread to make individual portions. It can easily become dry; therefore, various techniques exist to keep the dish moist, like mixing in bread crumbs and egg, covering it with sauce, wrapping it, or using moisture-enhancing ingredients in the mixture, such as filling it with fatty meats, rich cheeses, or vegetables.</p>
 
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>1.5 pounds ground beef</li>
+        <li>1 egg</li>
+        <li>1 onion, chopped</li>
+        <li>1 cup milk</li>
+        <li>1 cup dried bread crumbs
+        <li>salt and pepper to taste</li>
+        <li>2 tablespoons brown sugar</li>
+        <li>2 tablespoons prepared mustard</li>  
+        <li>⅓ cup ketchup</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li>In a large bowl, combine the beef, egg, onion, milk and bread OR cracker crumbs. Season with salt and pepper to taste and place in a lightly greased 9x5-inch loaf pan, or form into a loaf and place in a lightly greased 9x13-inch baking dish.</li>
+        <li>In a separate small bowl, combine the brown sugar, mustard and ketchup. Mix well and pour over the meatloaf.</li>
+        <li>Bake at 350 degrees F (175 degrees C) for 1 hour.</li>
+    </ol>
     
 </body>
 </html>
