Changing the language of description to English

--- a/recipes/homemade-mac-and-cheese.html
+++ b/recipes/homemade-mac-and-cheese.html
@@ -7,6 +7,15 @@
     <title>Homemade Mac and Cheese Recipe</title>
 </head>
 <body>
+    
     <h1>Homemade Mac and Cheese</h1>
+
+    <img src="https://media.istockphoto.com/photos/casserole-with-pasta-picture-id493996066">
+
+    <h2>Description</h2>
+
+    <p>Macaroni and cheese is a casserole, whose main ingredients are macaroni  and cheese sauce. Cheddar (or processed cheese similar to cheddar) is traditionally used, although other varieties can be used. Similarly, other types of pasta can be used, despite which it retains the name.</p>
+
+    <p>In its homemade preparation, the cheese is usually prepared as if it were a mornay sauce, with butter and cheese cooked in a roux. The final texture of this cheese sauce should be similar to a cream. The macaroni used are usually medium in size, almost longer than thick.</p>
 </body>
 </html>
