--- a/recipes/homemade-mac-and-cheese.html
+++ b/recipes/homemade-mac-and-cheese.html
@@ -17,5 +17,25 @@
     <p>Macaroni and cheese is a casserole, whose main ingredients are macaroni  and cheese sauce. Cheddar (or processed cheese similar to cheddar) is traditionally used, although other varieties can be used. Similarly, other types of pasta can be used, despite which it retains the name.</p>
 
     <p>In its homemade preparation, the cheese is usually prepared as if it were a mornay sauce, with butter and cheese cooked in a roux. The final texture of this cheese sauce should be similar to a cream. The macaroni used are usually medium in size, almost longer than thick.</p>
+
+    <h2>Ingredients<h2>
+    
+    <ul>
+        <li>Macaroni: This homemade mac and cheese starts with a box of uncooked macaroni noodles. </li>
+        <li>Butter and flour: You'll need butter and flour to make a roux for the cheese sauce. You'll also need two tablespoons of butter for the topping.  </li>
+        <li>Milk: Use whole milk for the richest flavor and texture. </li>
+        <li>Cheese: This baked mac and cheese recipe calls for Cheddar and Parmesan cheeses. </li>
+        <li>Seasonings: Salt and pepper goes into the sauce, while paprika is sprinkled over the topping. </li>
+        <li> Bread crumbs: Use store-bought dried bread crumbs or make your own at home. </li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li> Boil the noodles: Boil the macaroni in salted water until the noodles are al dente. Drain and transfer to a prepared baking dish. </li>
+        <li>Make the cheese sauce: Melt butter, then whisk in the flour. Whisk in the milk, bring to a simmer, and stir in the cheeses. Season with salt and pepper and continue simmering until the sauce is thick. Pour the sauce over the noodles and stir. </li>
+        <li>Make the topping: Melt two tablespoons of butter in a skillet, add the bread crumbs, and toast until the crumbs are brown. Spread the topping over the macaroni and cheese, then sprinkle with paprika. </li>
+        <li>Bake the mac and cheese: Bake in the preheated oven until the topping is golden brown. </li>
+    </ol>
 </body>
 </html>
