--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna!!</a>
-    <a href="recipes/meatloaf.html">Meatloaf!!</a>
-    <a href="recipes/homemade-mac-and-cheese.html">Homemade Mac and Cheese!!</a>
+    <ol>
+        <li><a href="recipes/lasagna.html">Lasagna!!</a></li>
+        <li><a href="recipes/meatloaf.html">Meatloaf!!</a></li>
+        <li><a href="recipes/homemade-mac-and-cheese.html">Homemade Mac and Cheese!!</a></li>
+    </ol>
 </body>
 </html>
