Adding an chef image to main webpage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <img src="https://media.istockphoto.com/photos/portrait-of-handsome-man-in-kitchen-picture-id1299738603">
+
     <ol>
         <li><a href="recipes/lasagna.html">Lasagna!!</a></li>
         <li><a href="recipes/meatloaf.html">Meatloaf!!</a></li>
