--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <img src="https://media.istockphoto.com/photos/portrait-of-handsome-man-in-kitchen-picture-id1299738603">
+    <img src="https://media.istockphoto.com/photos/portrait-of-handsome-man-in-kitchen-picture-id1299738603" alt="Happy Man cooking ">
 
     <ol>
         <li><a href="recipes/lasagna.html">Lasagna!!</a></li>
