--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lasagna</h1> 
 
-    <img src="https://media.istockphoto.com/photos/meat-lasagna-picture-id543831374"> 
+    <img src="https://media.istockphoto.com/photos/meat-lasagna-picture-id543831374" alt="Delicious Lasagna"> 
 
     <h2>Description</h2>
     <p><strong>Pesto</strong> lasagna is a special recipe in which two stars of our cuisine come together harmoniously in a first course of homemade pasta that evokes the flavors of tradition. Layers of handmade egg pasta sheets alternate with a tasty and strong Genoese pesto (basil sauce) to be prepared with the first leaves of basil offered by the season.</p>
