Adding alt atribute to image in meatloaf.html

--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Meatloaf</h1>
 
-    <img src="https://media.istockphoto.com/photos/homemade-ground-meatloaf-with-vegetables-picture-id613334288">
+    <img src="https://media.istockphoto.com/photos/homemade-ground-meatloaf-with-vegetables-picture-id613334288" alt="A delicious Meatloaf">
 
     <h2>Description</h2>
     
