Adding alt atribute to image in homemade-mac-and-cheese.html

--- a/recipes/homemade-mac-and-cheese.html
+++ b/recipes/homemade-mac-and-cheese.html
@@ -10,7 +10,7 @@
     
     <h1>Homemade Mac and Cheese</h1>
 
-    <img src="https://media.istockphoto.com/photos/casserole-with-pasta-picture-id493996066">
+    <img src="https://media.istockphoto.com/photos/casserole-with-pasta-picture-id493996066" alt="Adding alt atribute to image in homemade-mac-and-cheese.html">
 
     <h2>Description</h2>
 
